objects/BLN_Address__c.object
<CustomObject>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>BLN Address</relationshipLabel>
        <relationshipName>BLN_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PoBox__c</fullName>
        <label>PoBox</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>BLN Address (State)</relationshipLabel>
        <relationshipName>BLN_Address1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>BLN Address</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AD-{0000000}</displayFormat>
        <label>BLN Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Address</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>